experimental/parser/testdata/parser/import/ok.proto.stderr.txt
warning: use of `import weak`
  --> testdata/parser/import/ok.proto:20:1
   |
20 | import weak "weak.proto";
   | ^^^^^^^^^^^
   = help: `import weak` is deprecated and not supported correctly in most
           Protobuf implementations

error: `import option` requires Edition 2024 or later
  --> testdata/parser/import/ok.proto:22:1
   |
22 | import option "option.proto";
   | ^^^^^^^^^^^^^

encountered 1 error and 1 warning
